--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 jdk:
  - openjdk8
 
-install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dnorpm -B -V
+install: mvn install -Dnorpm -B -V
 
