--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
     
     <groupId>org.jboss.set.mjolnir</groupId>
     <artifactId>mjolnir</artifactId>
-    <version>1.1.5</version>
+    <version>1.1.6-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <scm>
         <connection>scm:git:git://github.com/jboss-set/mjolnir.git</connection>
         <developerConnection>scm:git:git@github.com:jboss-set/mjolnir.git</developerConnection>
         <url>https://github.com/jboss-set/mjolnir</url>
-        <tag>1.1.5</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
