--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>mjolnir</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <!-- Don't require authentication for some places. -->
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>mjolnir</web-resource-name>
+            <url-pattern>/saml-info</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>mjolnir</web-resource-name>
+            <url-pattern>/logout.html</url-pattern>
+        </web-resource-collection>
+    </security-constraint>
+
+    <login-config>
+        <auth-method>KEYCLOAK-SAML</auth-method>
+    </login-config>
+
+    <security-role>
+        <role-name>user</role-name>
+    </security-role>
 
     <!-- Servlets -->
 
@@ -77,6 +107,11 @@
     <!-- Security Filters -->
 
     <filter>
+        <filter-name>SamlFilter</filter-name>
+        <filter-class>org.jboss.set.mjolnir.server.SamlFilter</filter-class>
+    </filter>
+
+    <filter>
         <filter-name>AuthenticationFilter</filter-name>
         <filter-class>org.jboss.set.mjolnir.server.AuthenticationFilter</filter-class>
     </filter>
@@ -85,6 +120,12 @@
         <filter-name>AdminOnlyFilter</filter-name>
         <filter-class>org.jboss.set.mjolnir.server.AdminOnlyFilter</filter-class>
     </filter>
+
+    <filter-mapping>
+        <filter-name>SamlFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
 
     <filter-mapping>
         <filter-name>AuthenticationFilter</filter-name>
