--- a/pom.xml
+++ b/pom.xml
@@ -289,7 +289,7 @@
                         </goals>
                         <configuration>
                             <sourceFile>${basedir}/saml-config/${saml.file}</sourceFile>
-                            <destinationFile>${project.build.directory}/${build.finalName}/WEB-INF/keycloak-saml.xml
+                            <destinationFile>${project.build.directory}/${project.build.finalName}/WEB-INF/keycloak-saml.xml
                             </destinationFile>
                         </configuration>
                     </execution>
