--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.jboss</groupId>
@@ -10,14 +9,14 @@
 
     <groupId>org.jboss.set.mjolnir</groupId>
     <artifactId>mjolnir</artifactId>
-    <version>1.1.8-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>war</packaging>
 
     <scm>
         <connection>scm:git:git://github.com/jboss-set/mjolnir.git</connection>
         <developerConnection>scm:git:git@github.com:jboss-set/mjolnir.git</developerConnection>
         <url>https://github.com/jboss-set/mjolnir</url>
-        <tag>HEAD</tag>
+        <tag>1.2.0</tag>
     </scm>
 
     <properties>
@@ -188,7 +187,7 @@
                     <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
                     <failOnViolation>true</failOnViolation>
-                    <useFile/>
+                    <useFile />
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -264,8 +263,7 @@
                             <stylesheet>fancy.xsl</stylesheet>
                             <!--<stylesheet>summary.xsl</stylesheet>-->
                             <fileMappers>
-                                <fileMapper
-                                        implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
+                                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
                                     <targetExtension>.html</targetExtension>
                                 </fileMapper>
                             </fileMappers>
@@ -400,7 +398,7 @@
                                     <filemode>644</filemode>
                                     <username>root</username>
                                     <groupname>root</groupname>
-                                    <artifact/>
+                                    <artifact />
                                 </mapping>
                                 <mapping>
                                     <directory>/usr/share/${project.name}</directory>
