--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,8 @@
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <distributable/>
+
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>mjolnir</web-resource-name>
