--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 jdk:
  - openjdk8
 
-install: mvn install -Dnorpm -B -V -DskipTests
+install: mvn install -Dnorpm -B -V -DskipTests -Pdev
 script: mvn test -B
